[package]
name = "ws-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
cobs = "0.2.3"
serial = "0.4.0"
uart-rs = { git = "ssh://git@github.com/Cube-OS/uart-rs.git", version = "0.2.0" }
